--- a/wp-content/plugins/all-in-one-wp-security-and-firewall/css/wp-security-admin-styles.css
+++ b/wp-content/plugins/all-in-one-wp-security-and-firewall/css/wp-security-admin-styles.css
@@ -75,6 +75,7 @@
 	border-width: 1px;
 	padding: 0 0 0 1em;
 	line-height: 20px;
+	overflow-wrap: break-word;
 }
 
 .aio_green_box {
@@ -330,6 +331,10 @@
 #aiowps_password_crack_time_calculation {
 	line-height: 1.16667em;
 	color: darkorange;
+}
+
+#aiowps_password_crack_time_calculation:empty + #aiowps_http_authentication_password_crack_time_explanation {
+	display: none;
 }
 
 /* bootstrap type labels */
@@ -803,7 +808,7 @@ button.button-link.aios-toggle-advanced-options.advanced-options-disabled, butto
 }
 
 @media screen and (max-width: 600px) {
-	
+
 	.aiowps_next_scheduled_entity {
 		float: none;
 		width: 100%;
@@ -813,7 +818,7 @@ button.button-link.aios-toggle-advanced-options.advanced-options-disabled, butto
 	.aiowps_time_now_wrapper {
 		margin-top: 0;
 	}
-	
+
 }
 
 .details.column-details {
